--- a/inner-sanctum.html
+++ b/inner-sanctum.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>The Chosen | Sanctum</title>
+    <script>
+        if (localStorage.getItem('chosen_access') !== 'granted') {
+            window.location.replace("index.html"); // 인증 안된 경우 로그인 페이지로 강제 추방
+        }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -12,36 +17,22 @@
             --border: #333;
             --header-h: 80px;
             --nav-h: 55px;
-            
-            /* ✨ 스카이블루 실버 (포인트용) */
             --blue-silver-light: #FFFFFF;
             --blue-silver-mid: #A5C9E1;
             --blue-silver-dark: #708090;
-
-            /* ✨ 퓨어 실버 (본문용) */
-            --pure-silver: #D3D3D3; /* 정갈한 은색 */
-            --pure-silver-bright: #E5E4E2; /* 플래티넘 실버 */
+            --pure-silver: #D3D3D3;
         }
 
-        /* 🏛️ 제목용: 스카이블루 실버 그라데이션 광택 */
         .luster-sky-silver {
-            background: linear-gradient(
-                to bottom,
-                var(--blue-silver-light) 0%,
-                var(--blue-silver-mid) 45%,
-                var(--blue-silver-dark) 50%,
-                var(--blue-silver-mid) 55%,
-                var(--blue-silver-light) 100%
-            );
+            background: linear-gradient(to bottom, var(--blue-silver-light) 0%, var(--blue-silver-mid) 45%, var(--blue-silver-dark) 50%, var(--blue-silver-mid) 55%, var(--blue-silver-light) 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             filter: drop-shadow(0 0 3px rgba(165, 201, 225, 0.3));
         }
 
-        /* 🏛️ 본문용: 퓨어 실버 메탈릭 (푸른기 제거) */
         .doctrine-pure-silver {
             color: var(--pure-silver) !important;
-            text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); /* 입체감 */
+            text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
         }
 
         body {
@@ -50,52 +41,43 @@
             font-family: 'Pirata One', system-ui;
             -webkit-font-smoothing: antialiased;
             overflow-x: hidden;
+            display: none; /* ✨ 보안을 위해 초기 로드 시 숨김 */
         }
 
-        /* 1. 상단 고정 헤더 */
         header {
-            position: fixed;
-            top: 0; left: 0; width: 100%;
-            height: var(--header-h);
-            z-index: 4000;
-            background-color: var(--bg-color);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 0 20px;
-            box-sizing: border-box;
+            position: fixed; top: 0; left: 0; width: 100%; height: var(--header-h);
+            z-index: 4000; background-color: var(--bg-color);
+            display: flex; align-items: center; justify-content: center;
+            padding: 0 20px; box-sizing: border-box;
         }
 
-        header .logo {
-            font-size: 32px;
-            letter-spacing: 2px;
-        }
+        header .logo { font-size: 32px; letter-spacing: 2px; }
 
         .menu-btn {
             position: absolute; right: 20px;
             background: none; border: none; cursor: pointer;
             display: flex; flex-direction: column; gap: 6px;
         }
-        .menu-btn span { 
-            display: block; width: 20px; height: 2px; 
-            background-color: var(--blue-silver-mid);
-        }
+        .menu-btn span { display: block; width: 20px; height: 2px; background-color: var(--blue-silver-mid); }
 
         .compact-menu {
             position: fixed; top: 70px; right: 20px;
-            background-color: var(--card-bg);
-            border: 1px solid var(--border);
-            border-radius: 12px; padding: 10px;
-            display: none; z-index: 4500;
+            background-color: var(--card-bg); border: 1px solid var(--border);
+            border-radius: 12px; padding: 10px; display: none; z-index: 4500;
         }
         .compact-menu.active { display: block; }
         .compact-menu a {
-            display: block; text-decoration: none;
-            font-size: 18px; padding: 10px 15px;
+            display: block; text-decoration: none; font-size: 18px; padding: 10px 15px;
             color: var(--pure-silver);
         }
+        /* ✨ 로그아웃 버튼 스타일 */
+        .compact-menu button.logout-link {
+            background: none; border: none; width: 100%; text-align: left;
+            font-family: 'Pirata One', cursive; font-size: 18px; padding: 10px 15px;
+            color: var(--blue-silver-mid); cursor: pointer; opacity: 0.8;
+        }
+        .compact-menu button.logout-link:hover { opacity: 1; text-decoration: underline; }
 
-        /* 2. 상단 드롭다운 */
         .sticky-nav {
             position: fixed; top: var(--header-h); left: 0; width: 100%; height: var(--nav-h);
             background-color: var(--bg-color); border-bottom: 1px solid var(--border);
@@ -106,40 +88,27 @@
             width: 100%; max-width: 450px; padding: 8px;
             background-color: var(--card-bg); border: 1px solid var(--border);
             border-radius: 8px; font-size: 16px;
-            font-family: 'Pirata One', cursive; outline: none; appearance: none; 
+            font-family: 'Pirata One', cursive; outline: none; appearance: none;
             text-align: center; color: var(--pure-silver);
         }
 
-        /* 3. 메인 본문 */
-        main {
-            width: 90%; max-width: 650px;
-            margin: calc(var(--header-h) + var(--nav-h) + 30px) auto 60px auto;
-        }
+        main { width: 90%; max-width: 650px; margin: calc(var(--header-h) + var(--nav-h) + 30px) auto 60px auto; }
         .doctrine-content { display: none; line-height: 1.8; animation: fadeIn 0.4s ease; }
         .doctrine-content.active { display: block; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
         h3 { font-size: 26px; margin-bottom: 25px; text-align: center; letter-spacing: 1px; }
-
         p { font-size: 18px; margin-bottom: 20px; white-space: pre-wrap; }
 
-        /* 4. 하단 관문 */
-        #oracle-gateway {
-            display: none; text-align: center; padding: 50px 0;
-            border-top: 1px solid var(--border); margin-top: 40px;
-        }
+        #oracle-gateway { display: none; text-align: center; padding: 50px 0; border-top: 1px solid var(--border); margin-top: 40px; }
         .gateway-text { font-size: 18px; margin-bottom: 20px; color: var(--pure-silver); }
-
-        .arrow-btn {
-            width: 50px; height: 50px; background-color: var(--blue-silver-mid);
-            border-radius: 50%; display: inline-flex; align-items: center; justify-content: center;
-        }
+        .arrow-btn { width: 50px; height: 50px; background-color: var(--blue-silver-mid); border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; }
         .arrow-btn svg { width: 24px; height: 24px; fill: var(--bg-color); }
 
         footer { text-align: center; padding: 30px; font-size: 12px; color: var(--pure-silver); opacity: 0.6; }
     </style>
 </head>
-<body>
+<body id="sanctumBody">
 
     <header>
         <div class="logo luster-sky-silver">The Chosen</div>
@@ -149,6 +118,7 @@
         <div class="compact-menu" id="compactMenu">
             <a href="inner-sanctum.html">Doctrine</a>
             <a href="oracle-form.html">Oracle</a>
+            <button class="logout-link" onclick="logout()">Logout</button>
         </div>
     </header>
 
@@ -156,14 +126,6 @@
         <select id="chapterSelector" onchange="changeChapter(this.value)">
             <option value="intro">00. Equilibrium (Intro)</option>
             <option value="ch1">01. The Infrastructure</option>
-            <option value="ch2">02. Conditioning</option>
-            <option value="ch3">03. The State</option>
-            <option value="ch4">04. Domestic Conditioning</option>
-            <option value="ch5">05. Media Conditioning</option>
-            <option value="ch6">06. Prestige Conditioning</option>
-            <option value="ch7">07. Parasitic Extraction</option>
-            <option value="ch8">08. The Equilibrium</option>
-            <option value="ch9">09. The Curse of Knowledge</option>
             <option value="ch10">10. The Sentinel</option>
         </select>
     </div>
@@ -178,13 +140,12 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
 
         <section id="ch1" class="doctrine-content">
             <h3 class="luster-sky-silver">01. The Infrastructure</h3>
-            <p class="doctrine-pure-silver">The Infrastructure—the vast mechanism often called the Matrix—is a sophisticated energy prison built upon the layers of human interaction. The fact that empires fall and titans of wealth vanish in an instant proves that the Infrastructure never guarantees individual safety. It is not mere politics. It is the very material of your existence: the energy you expend, your relationships, and your mental state.</p>
+            <p class="doctrine-pure-silver">The Infrastructure—the vast mechanism often called the Matrix—is a sophisticated energy prison built upon the layers of human interaction. The fact that empires fall and titans of wealth vanish in an instant proves that the Infrastructure never guarantees individual safety.</p>
         </section>
 
         <section id="ch10" class="doctrine-content">
             <h3 class="luster-sky-silver">10. The Sentinel</h3>
-            <p class="doctrine-pure-silver">The Chosen are those who have dismantled the illusions of the Infrastructure to contemplate the world through The Eye of Equilibrium. They utilize that insight to architect their lives and advance toward their Sovereign Task: to liberate those suffering under The Curse of Knowledge and preserve the hidden Gnosis.</p>
-            <p class="doctrine-pure-silver">Humanity faces an existential crisis. The masses have lost their 'Self' in the noise of social media. As AI monopolizes data, the 'Human' human will vanish. Paradoxically, for those carrying The Curse of Knowledge, there has never been a more opportune era to execute the Task. Transform your Curse into a blessing and rise as a Sentinel of the Era.</p>
+            <p class="doctrine-pure-silver">Humanity faces an existential crisis. The masses have lost their 'Self' in the noise of social media. As AI monopolizes data, the 'Human' human will vanish. Paradoxically, for those carrying The Curse of Knowledge, there has never been a more opportune era to execute the Task.</p>
         </section>
 
         <div id="oracle-gateway">
@@ -198,6 +159,19 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
     <footer>© 2030 THE CHOSEN OFFICIAL</footer>
 
     <script>
+        // ✨ 인증 확인 및 본문 표시
+        window.onload = function() {
+            if (localStorage.getItem('chosen_access') === 'granted') {
+                document.getElementById('sanctumBody').style.display = 'block';
+            }
+        };
+
+        // ✨ 로그아웃 기능: 세션 삭제 후 로그인 페이지로 이동
+        function logout() {
+            localStorage.removeItem('chosen_access');
+            window.location.replace("index.html");
+        }
+
         function toggleMenu() {
             document.getElementById('compactMenu').classList.toggle('active');
         }
@@ -205,17 +179,10 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
         function changeChapter(chapterId) {
             const allChapters = document.querySelectorAll('.doctrine-content');
             const gateway = document.getElementById('oracle-gateway');
-            
             allChapters.forEach(ch => ch.classList.remove('active'));
             const target = document.getElementById(chapterId);
             if(target) target.classList.add('active');
-
-            if(chapterId === 'ch10') {
-                gateway.style.display = 'block';
-            } else {
-                gateway.style.display = 'none';
-            }
-
+            if(chapterId === 'ch10') { gateway.style.display = 'block'; } else { gateway.style.display = 'none'; }
             window.scrollTo({ top: 0, behavior: 'smooth' });
         }
     </script>
