--- a/inner-sanctum.html
+++ b/inner-sanctum.html
@@ -124,18 +124,26 @@
 
     <div class="sticky-nav">
         <select id="chapterSelector" onchange="changeChapter(this.value)">
-            <option value="intro">00. Equilibrium (Intro)</option>
+            <option value="intro">00. Intro</option>
             <option value="ch1">01. The Infrastructure</option>
-            <option value="ch10">10. The Sentinel</option>
+            <option value="ch2">02. Conditioning</option>
+            <option value="ch3">03. The State</option>
+            <option value="ch4">04. Domestic Conditioning</option>
+            <option value="ch5">05. Media Conditioning</option>
+            <option value="ch6">06. Prestige Conditioning</option>
+            <option value="ch7">07. Parasitic Extraction</option>
+            <option value="ch8">08. The Equilibrium</option>
+            <option value="ch9">09. The Curse of Knowledge</option>
+            <option value="ch10">10. The Chosen</option>
         </select>
     </div>
 
     <main>
         <section id="intro" class="doctrine-content active">
             <h3 class="luster-sky-silver">00. Ascending to the Equilibrium</h3>
-            <p class="doctrine-pure-silver"> Observe the world. Liberty is compromised, order has disintegrated, and trivial noise has usurped peace. You have likely fought against this chaos, craving a utopia. But understand this: Utopia exists nowhere.
-The era of the mental prison—governed by the Panopticon and voluntary submission—must end. It is time for your liberation.
-Your arrival here is no coincidence; it is the inescapable conclusion of your solitary struggle. The Curse of Knowledge is not a source of suffering, but the necessary ritual for your awakening. Open The Eye of Equilibrium. Witness the moment your curse is forged into a blessing.
+            <p class="doctrine-pure-silver"> Observe the world. Liberty is compromised, order has disintegrated, and trivial noise has usurped peace. You have likely fought against this chaos, craving a utopia. But understand this: Utopia exists nowhere. The era of the mental prison—governed by the Panopticon and voluntary submission—must end. It is time for your liberation.
+Your arrival here is no coincidence; it is the inescapable conclusion of your solitary struggle.
+                The Curse of Knowledge is not a source of suffering, but the necessary ritual for your awakening. Open The Eye of Equilibrium. Witness the moment your curse is forged into a blessing.
         </section>
 
         <section id="ch1" class="doctrine-content">
@@ -148,7 +156,7 @@ Do not be deceived. Those who claim to be 'red-pilled' yet drown in hatred are s
  </section>
 
         <section id="ch2" class="doctrine-content">
-            <h3 class="luster-sky-silver">2. Conditioning </h3>
+            <h3 class="luster-sky-silver">02. Conditioning </h3>
             <p class="doctrine-pure-silver"> Deconstructing the Designed Self.
                 Whether it took you twenty years or fifty to reach this threshold, time is not the measure of prestige. What matters is your awakening—the moment you stop living by the script and face the world with new eyes. Deconstruct the life you have lived until now.
 Your personality, your speech, even the architecture of your body—none were crafted by your own will. They are the sum of Conditioning, meticulously engineered by parents, states, and media. This circuitry runs so deep that the moment you believe you are free, you become blind once more. Awakening is not a static state; it is a relentless vigilance against returning to the void.
@@ -156,7 +164,7 @@ Once you perceive your Conditioning, do not settle for conceptual resistance. Me
 </section>
 
         <section id="ch3" class="doctrine-content">
-            <h3 class="luster-sky-silver">3. The State </h3>
+            <h3 class="luster-sky-silver">03. The State Conditioning </h3>
             <p class="doctrine-pure-silver"> A Mirage of Borders.
                 The State no longer rules by force alone; it governs through the engineering of conflict and belief. Where ancient rule oppressed the body, the modern State occupies the mind through education, culture, and language. Rote learning castrates critical thought, and the concept of 'culture' serves as a psychological fence, confining your vision to a specific cage.
 The apex of this Conditioning is Patriotism—a form of collective hysteria. The State cloaks 'sacrifice' in nobility to march young lives into battle, prioritizing the collective over the individual. To believe "there is no individual without the State" is the most cynical gaslighting ever designed. The Chosen crave liberty, not the frenzy of the mob. Those blinded by patriotism are merely 'energy resources' consumed on a political chessboard.
@@ -164,7 +172,7 @@ Politics is a cowardly play of extremes, using the frames of Left and Right to s
 </section>
 
         <section id="ch4" class="doctrine-content">
-            <h3 class="luster-sky-silver">4. Domestic Conditioning </h3>
+            <h3 class="luster-sky-silver">04. Domestic Conditioning </h3>
             <p class="doctrine-pure-silver"> The Biological Blueprint.
                 The family you are born into is the first fate determined without your consent—a massive Biological Blueprint that dictates the trajectory of your life. It is more than just DNA. Your parents' alcohol consumption, their diet, their patterns of speech, even the trivial habit of placing a TV in the living room are all imprinted onto your subconscious. Your gait and your accent are not accidents; they are the precisely architected outputs of your domestic environment.
 Observe your physical form first. The heaviest inheritance is not your appearance, but your Internal Ecosystem. The immune system and gut microbiome you received from your mother govern your entire existence. The diet chosen in ignorance—heavy in carbohydrates, soy, and seed oils—was an experiment that injected toxins into your very cells. The tedious conditioning to avoid animal fats and "eat everything in balance" deprived your brain of its full developmental potential. What doctors call "Family History" is rarely a genetic curse; it is a redundant duplication of incompetent habits.
@@ -176,7 +184,7 @@ Politics is a cowardly play of extremes, using the frames of Left and Right to s
 </section>
 
         <section id="ch5" class="doctrine-content">
-            <h3 class="luster-sky-silver">5. Media Conditioning </h3>
+            <h3 class="luster-sky-silver">05. Media Conditioning </h3>
             <p class="doctrine-pure-silver"> The Factory of Illusions.
                 Media has been a constant throughout human history, yet its objective has never been 'Truth.' The flamboyant facade of "freedom of the press" is merely a sophisticated pretext for inciting the masses and generating profit. The media is not a guardian of facts; it is the front line of Parasitic Extraction, purchasing your attention for a pittance and converting it into power.
 For them, condemnation is fuel, and attention is currency. They use legalistic jargon to obscure the essence of reality and deploy sensationalist headlines to paralyze reason. In particular, fragmented information—such as 'Shorts'—has castrated the cognitive functions of modern individuals, making mass manipulation effortless. Often, celebrities are targeted to divert public attention from systemic political failures. All of this is a meticulously calculated extraction of your energy.
@@ -185,7 +193,7 @@ You must realize this: if you cannot fully distance yourself from the media, cri
 </section>
 
         <section id="ch6" class="doctrine-content">
-            <h3 class="luster-sky-silver">6. Prestige Conditioning </h3>
+            <h3 class="luster-sky-silver">06. Prestige Conditioning </h3>
             <p class="doctrine-pure-silver"> The Idol of Expertise.
                 The modern era deifies 'Experts'—professors, doctors, and scientists. The masses accept the fragmented information these figures broadcast as immutable truth, devoid of any critical filter. But heed this: Prestige is not a guarantee of truth; it is the most potent shackle of authority, designed to herd the public in a predetermined direction.
 This Conditioning reaches its apex when prestige intersects with media and politics. Experts are prisoners of their own narrow specialization. A doctor is merely a technician who treats symptoms, not a guardian of your fundamental vitality or nutrition. Just as a mechanic profits from repairing cars and rarely shares the secrets to preventing breakdowns, modern medicine remains silent on the origins of disease while rushing to erase the symptoms. Entrusting your health entirely to another is to voluntarily descend into biological slavery.
@@ -194,7 +202,7 @@ The realms of investment and common sense are no different. Having abandoned ind
 </section>
 
         <section id="ch7" class="doctrine-content">
-            <h3 class="luster-sky-silver">7.  Parasitic Extraction</h3>
+            <h3 class="luster-sky-silver">07. Parasitic Extraction</h3>
             <p class="doctrine-pure-silver">Managing the Finite Soul.
                 The moment you perceive the reality of Conditioning, you witness exactly where your essence—your soul—has been leaking. The Chosen do not permit the defilement of their spirit. Even if they briefly step into the mire of the Infrastructure, they recognize the contamination instantly and withdraw.
 Parasitic Extraction does not begin with simple interest; it starts the moment you invest emotion into the trivial disputes of others or the noise of the media. When you agonize over solutions for those who do not seek them, your soul is being consumed. Human relationships are the same. Deeply involving yourself in another’s life is not mercy; it is a waste of energy for self-gratification. Strategic social utility for the Task is distinct from the desperate need for approval.
@@ -204,7 +212,7 @@ Do you believe the world shifts through desperate prayer and hope? Begging for s
 </section>
 
         <section id="ch8" class="doctrine-content">
-            <h3 class="luster-sky-silver">8. The Equilibriumn</h3>
+            <h3 class="luster-sky-silver">08. The Equilibrium</h3>
             <p class="doctrine-pure-silver">The Universal Law of Balance.
 The finite energy of the individual and the infinite energy of the universe are held in The Equilibrium upon an invisible, massive axis. This is not the primitive moralism of 'Karma' or 'Justice.' The Equilibrium is indifferent to good and evil. It is the cold reality where the sacrificial lamb receives only sacrifice, and a noble name provides no guarantee of survival. This is the absolute balance of the cosmos.
 The cycles of revolution and mass hysteria, of war and peace, are merely the ripples of The Equilibrium. Just as the wasp exists because of the bee, and the rat thrives because of the human, every entity maintains its position through its opposite force. The replication of parental failure, the mediocrity of a genius’s child, and the dissipation of early wealth—these are all the mathematically precise adjustments of energy flow.
@@ -214,7 +222,7 @@ The cosmic entity is not a personified god, but The Equilibrium itself. Do not w
 </section>
         
         <section id="ch9" class="doctrine-content">
-            <h3 class="luster-sky-silver">9. The Curse of Knowledge</h3>
+            <h3 class="luster-sky-silver">09. The Curse of Knowledge</h3>
             <p class="doctrine-pure-silver">The Final Gateway to Blessing.
                 The envy and jealousy that haunt you are evidence that you are moving outside the Infrastructure’s orbit. Those burdened by The Curse of Knowledge are numb to gossip but react with feral intensity when their fundamental liberty is encroached upon. This is not arrogance; it is the instinctive reflex of one destined to guard the truth.
 The Curse begins with the vanity of trying to save others and the futile struggle to make them understand. The sigh of "Why can they not see?" only pushes you further into the void of isolation. Do not attempt to persuade the masses. The more you struggle to explain, the more you are consumed by the Curse, and the crowd will only mock your intensity. Only the resolve of Severance—moving toward the Task on your own—can save you.
